Salvando primeiro arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.profiles.active=test
 
 default.sender=mapsegundo@gmail.com
 default.recipient=marshalladamastor@gmail.com
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=marshall-spring-ionic
+s3.region=sa-east-1
