--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -15,4 +15,4 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.ssl.enable = true
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
